# Asgard-Agents

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.python  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  render.yaml  supervisord.conf  tailwind.config.js
backend/: Cargo.lock.bak  Cargo.toml
backend/src/: config.rs  error.rs  main.rs  models.rs
backend/src/routes/: agent.rs  health.rs  job.rs  mod.rs
backend/src/services/: agent_tools.rs  ai.rs  mod.rs  solana.rs
contracts/: Anchor.toml
contracts/interfaces/: metadata.json
contracts/programs/workspace/src/: lib.rs
contracts/tests/: workspace.ts
python_service/: main.py  requirements.txt
python_service/agents/heimdall/: agent.py
python_service/agents/idunn/: agent.py
python_service/agents/nexus/: agent.py
python_service/agents/odin/: agent.py
python_service/agents/teacher/: agent.py
src/: App.tsx  index.css
src/components/: AgentCard.tsx  ArchitectureDiagram.tsx  ArchitectureSession.tsx  CategoryFilter.tsx  CookingSession.tsx  ExecutionTerminal.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  JobHistoryCard.tsx  MermaidRenderer.tsx  TaskPromptForm.tsx
src/hooks/: useSolanaProgram.ts
src/idl/: workspaceIDL.json
src/lib/: agentService.ts  agents.ts  aigentEscrow.ts  architectureParser.ts  configAddress.ts  jobContext.tsx  recipeParser.ts  types.ts
src/pages/: AgentDetail.tsx  Dashboard.tsx  Index.tsx  NotFound.tsx
src/types/: architecture.ts  recipe.ts
