[package]
name = "aigent-backend"
version = "0.1.0"
edition = "2021"
description = "AIGENT - Decentralized AI Agent Executioner Service (Rust/Axum)"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Solana SDK
solana-sdk = "1.18"
solana-client = "1.18"
anchor-client = "0.30"

# AI / HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Crypto
sha2 = "0.10"
bs58 = "0.5"
hex = "0.4"
base64 = "0.21"

# AI Framework
rig-core = "0.5"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
